[tool.poetry]
name = "ethics of machine learning"
version = "3.0.0"
description = "3rd homework Ethics of Machine Learning"
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
license = "GNU v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.10"
notebook = "^7.0.6"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
